<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/text_start"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/buttonSingleplayer"
       android:text="@string/start_text"
       android:textStyle="italic|bold"
       android:textSize="28sp"
       android:textColor="@color/black"
       android:background="@drawable/text_shape"
       android:padding="30dp"
       />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_start"
        app:layout_constraintEnd_toStartOf="@+id/buttonSingleplayer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_shape"
        android:padding="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSingleplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleplayer"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/text_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonMultiplayer"
        android:background="@drawable/button_shape2"
        android:padding="18dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>