<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SplashActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/splash_constraint"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/text_github"
       android:background="@drawable/text_shape"
       android:padding="40dp"
       >
       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/text_developed"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toTopOf="@+id/text_developer"
           android:text="@string/developed"
           android:textSize="26sp"
           android:textColor="#448AFF"
           android:textStyle="italic"
           />

       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/text_developer"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/text_developed"
           app:layout_constraintEnd_toEndOf="parent"
           android:text="@string/developer"
           android:textSize="34sp"
           android:textColor="#304FFE"
           android:textStyle="bold|italic"
           android:layout_marginTop="30dp"
           />
   </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/splash_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/github"
        android:textSize="24sp"
        android:textColor="#00B0FF"
        />




</androidx.constraintlayout.widget.ConstraintLayout>