<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SetupPlayerActivity">


   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/text_setupNames"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/constraint_setup"
       android:textColor="@color/black"
       android:textStyle="bold"
       android:textSize="30sp"
       android:text="@string/enter_name"
       android:background="@drawable/text_shape"
       android:padding="20dp"
       />

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/constraint_setup"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="@+id/text_setupNames"
       app:layout_constraintEnd_toEndOf="@+id/text_setupNames"
       app:layout_constraintTop_toBottomOf="@+id/text_setupNames"
       app:layout_constraintBottom_toTopOf="@+id/button_start"
       android:layout_marginTop="30dp"
       android:background="@drawable/text_shape"
       android:padding="20dp"
      >

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/textPlayer1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/red"
          android:textStyle="bold"
          android:textSize="20sp"
          android:text="@string/player1"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/edittextPlayer1"
         />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edittextPlayer1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:textStyle="italic"
          android:textSize="18sp"
          android:hint="@string/player1"
          app:layout_constraintStart_toStartOf="@+id/textPlayer1"
          app:layout_constraintTop_toBottomOf="@+id/textPlayer1"
          android:ems="18"
         />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/textPlayer2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/blue_toolbar"
          android:textStyle="bold"
          android:textSize="20sp"
          android:text="@string/player2"
          app:layout_constraintStart_toStartOf="@+id/edittextPlayer1"
          app:layout_constraintTop_toBottomOf="@id/edittextPlayer1"
          android:layout_marginTop="80dp"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edittextPlayer2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:textStyle="italic"
          android:textSize="18sp"
          app:layout_constraintStart_toStartOf="@+id/textPlayer2"
          app:layout_constraintTop_toBottomOf="@+id/textPlayer2"
          android:hint="@string/player2"
          android:ems="18"
          />

   </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_start"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/start_button"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="@id/constraint_setup"
      app:layout_constraintEnd_toEndOf="@id/constraint_setup"
      app:layout_constraintTop_toBottomOf="@id/constraint_setup"
      app:layout_constraintBottom_toBottomOf="parent"
      android:background="@drawable/button_shape"
      android:padding="20dp"

     />

</androidx.constraintlayout.widget.ConstraintLayout>